fix: Correct CSS styling of filter-options to avoid horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,11 +118,12 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #005e8f;
 	/*We also implement responsiveness in this section: */
   display: flex;
 	/*Using justify-content we effectively align to the center its children elements*/
+  /* flex-direction: column; */
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -131,7 +132,7 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: auto;
 }
 .filter-options select {
   background-color: white;
@@ -377,6 +378,11 @@ nav h1 a {
 
 }
 
+@media screen and (max-width: 548) {
+	.filter-options {
+		flex-direction: column;
+	}
+}
 @media screen and (min-width:731px) {
 	#restaurant-container {
 		padding-top: 150px;
